Commit translated content

--- a/flow-docs/TOC.yml
+++ b/flow-docs/TOC.yml
@@ -30,6 +30,8 @@
       href: data-operations.md
     - name: Filtrado y copia de datos
       href: odata-filters.md
+    - name: Uso de expresiones en condiciones
+      href: use-expressions-in-conditions.md
     - name: Creación de un flujo con Dynamics 365
       href: connection-dynamics365.md
     - name: Agregar datos a Common Data Service
