--- a/flow-docs/guided-learning/build-flows.yml
+++ b/flow-docs/guided-learning/build-flows.yml
@@ -7,7 +7,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: work-with-approvals
-  nextTutorialTitle: Work with approvals
+  nextTutorialTitle: Uso de aprobaciones
   displayType: one-column
   author: MSFTMan
   manager: anneta
