--- a/flow-docs/guided-learning/work-with-approvals.yml
+++ b/flow-docs/guided-learning/work-with-approvals.yml
@@ -7,7 +7,7 @@ metadata:
   audience: Business User
   level: Beginner
   nextTutorialHref: administer-flows
-  nextTutorialTitle: Administer flows
+  nextTutorialTitle: Administración de flujos
   displayType: one-column
   author: MSFTMan
   manager: anneta
