--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -22,7 +22,8 @@
   ],
   "notification_subscribers": [],
   "branches_to_filter": [
-    "live-sxs",
+    "live",
+    "master",
     "master-sxs"   
   ],
   "continue_with_document_error": true,
