--- a/flow-docs/guided-learning/administer-flows.yml
+++ b/flow-docs/guided-learning/administer-flows.yml
@@ -1,9 +1,8 @@
-### YamlMime:YamlDocument
 documentType: Tutorial
-title: Administración de flujos
+title: "Administración de flujos"
 metadata:
-  title: Administración de flujos | Microsoft Flow
-  description: Aprenda a usar entornos y directivas de protección de datos para administrar flujos y orígenes de datos.
+  title: "Administración de flujos | Microsoft Flow"
+  description: "Aprenda a usar entornos y directivas de protección de datos para administrar flujos y orígenes de datos."
   audience: Business User
   level: Beginner
   displayType: one-column
@@ -14,20 +13,25 @@ metadata:
   ms.date: 10/04/2017
   ms.author: deonhe
 items:
-  - durationInMinutes: 1
-    content: |
-      Aprenda a usar entornos y directivas de protección de datos para administrar flujos y orígenes de datos.
-  - title: Uso de entornos para administrar flujos
-    durationInMinutes: 8
-    content: |
-      > [!Video https://www.youtube.com/embed/wnScBLz7css?rel=0]
+- durationInMinutes: 1
+  content: "Aprenda a usar entornos y directivas de protección de datos para administrar flujos y orígenes de datos.\n"
+  ms.openlocfilehash: 52eb25087beb258481be25a560c84093d025021a
+  ms.sourcegitcommit: 01325305b9d2cf964acac9feb6cca0af66db7440
+  ms.translationtype: HT
+  ms.contentlocale: es-ES
+  ms.lasthandoff: 11/07/2017
+- title: Uso de entornos para administrar flujos
+  durationInMinutes: 8
+  content: >
+    > [!Video https://www.youtube.com/embed/wnScBLz7css?rel=0]
 
-      [!INCLUDE [learning-environments](../includes/learning-environments.md)]
-  - title: Uso de directivas de prevención de pérdida de datos
-    durationInMinutes: 6
-    content: |
-      > [!Video https://www.youtube.com/embed/vls4RPVP5xE?rel=0]
 
-      [!INCLUDE [learning-data-loss-prevention](../includes/learning-data-loss-prevention.md)]
-  - content: |
-      Ha completado la sección **Administración de flujos** del aprendizaje guiado de Microsoft Flow.
+    [!INCLUDE [learning-environments](../includes/learning-environments.md)]
+- title: "Uso de directivas de prevención de pérdida de datos"
+  durationInMinutes: 6
+  content: >
+    > [!Video https://www.youtube.com/embed/vls4RPVP5xE?rel=0]
+
+
+    [!INCLUDE [learning-data-loss-prevention](../includes/learning-data-loss-prevention.md)]
+- content: "Ha completado la sección **Administración de flujos** del aprendizaje guiado de Microsoft Flow.\0"
