--- a/flow-docs/guided-learning/get-started.yml
+++ b/flow-docs/guided-learning/get-started.yml
@@ -1,13 +1,12 @@
-### YamlMime:YamlDocument
 documentType: Tutorial
-title: Introducción
+title: "Introducción"
 metadata:
-  title: Introducción | Microsoft Flow
-  description: 'Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco.'
+  title: "Introducción | Microsoft Flow"
+  description: "Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco."
   audience: Business User
   level: Beginner
   nextTutorialHref: build-flows
-  nextTutorialTitle: Compilación de flujos
+  nextTutorialTitle: "Compilación de flujos"
   displayType: one-column
   author: MSFTMan
   manager: anneta
@@ -16,26 +15,32 @@ metadata:
   ms.date: 10/04/2017
   ms.author: deonhe
 items:
-  - durationInMinutes: 1
-    content: |
-      Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco.
-  - title: Conceptos básicos de Microsoft Flow
-    durationInMinutes: 14
-    content: |
-      > [!Video https://www.youtube.com/embed/CYR-fZc5Maw?rel=0]
+- durationInMinutes: 1
+  content: "Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco.\n"
+  ms.openlocfilehash: 7b5bcbbe1a53feb773b940aae32b295cec5feba8
+  ms.sourcegitcommit: 01325305b9d2cf964acac9feb6cca0af66db7440
+  ms.translationtype: HT
+  ms.contentlocale: es-ES
+  ms.lasthandoff: 11/07/2017
+- title: "Conceptos básicos de Microsoft Flow"
+  durationInMinutes: 14
+  content: >
+    > [!Video https://www.youtube.com/embed/CYR-fZc5Maw?rel=0]
 
-      [!INCLUDE [learning-introduce-flow](../includes/learning-introduce-flow.md)]
-  - title: Creación de un flujo desde una plantilla
-    durationInMinutes: 9
-    content: |
-      > [!Video https://www.youtube.com/embed/D46qE7FuShM?rel=0]
 
-      [!INCLUDE [learning-create-a-flow](../includes/learning-create-a-flow.md)]
-  - title: Uso de la aplicación móvil Microsoft Flow
-    durationInMinutes: 8
-    content: |
-      > [!Video https://www.youtube.com/embed/o80hRMpb0_4?rel=0]
+    [!INCLUDE [learning-introduce-flow](../includes/learning-introduce-flow.md)]
+- title: "Creación de un flujo desde una plantilla"
+  durationInMinutes: 9
+  content: >
+    > [!Video https://www.youtube.com/embed/D46qE7FuShM?rel=0]
 
-      [!INCLUDE [learning-mobile-app](../includes/learning-mobile-app.md)]
-  - content: |
-      Ha completado la sección **Introducción** del aprendizaje guiado de Microsoft Flow.
+
+    [!INCLUDE [learning-create-a-flow](../includes/learning-create-a-flow.md)]
+- title: "Uso de la aplicación móvil Microsoft Flow"
+  durationInMinutes: 8
+  content: >
+    > [!Video https://www.youtube.com/embed/o80hRMpb0_4?rel=0]
+
+
+    [!INCLUDE [learning-mobile-app](../includes/learning-mobile-app.md)]
+- content: "Ha completado la sección **Introducción** del aprendizaje guiado de Microsoft Flow.\0"
