--- a/flow-docs/guided-learning/work-with-approvals.yml
+++ b/flow-docs/guided-learning/work-with-approvals.yml
@@ -1,13 +1,12 @@
-### YamlMime:YamlDocument
 documentType: Tutorial
 title: Uso de aprobaciones
 metadata:
   title: Uso de aprobaciones | Microsoft Flow
-  description: Aprenda a administrar la aprobación de documentos y los procesos en Microsoft Flow.
+  description: "Aprenda a administrar la aprobación de documentos y los procesos en Microsoft Flow."
   audience: Business User
   level: Beginner
   nextTutorialHref: administer-flows
-  nextTutorialTitle: Administración de flujos
+  nextTutorialTitle: "Administración de flujos"
   displayType: one-column
   author: MSFTMan
   manager: anneta
@@ -16,20 +15,25 @@ metadata:
   ms.date: 10/04/2017
   ms.author: deonhe
 items:
-  - durationInMinutes: 1
-    content: |
-      Aprenda a administrar la aprobación de documentos y los procesos en Microsoft Flow.
-  - title: Creación de una solicitud de aprobación
-    durationInMinutes: 4
-    content: |
-      > [!Video https://www.youtube.com/embed/65yz8tqnWe0?rel=0]
+- durationInMinutes: 1
+  content: "Aprenda a administrar la aprobación de documentos y los procesos en Microsoft Flow.\n"
+  ms.openlocfilehash: 1967e986e5bf7a9ffceb13578b41710869d8e890
+  ms.sourcegitcommit: 01325305b9d2cf964acac9feb6cca0af66db7440
+  ms.translationtype: HT
+  ms.contentlocale: es-ES
+  ms.lasthandoff: 11/07/2017
+- title: "Creación de una solicitud de aprobación"
+  durationInMinutes: 4
+  content: >
+    > [!Video https://www.youtube.com/embed/65yz8tqnWe0?rel=0]
 
-      [!INCLUDE [learning-approval-center](../includes/learning-approval-center.md)]
-  - title: Proceso de una solicitud de aprobación
-    durationInMinutes: 7
-    content: |
-      > [!Video https://www.youtube.com/embed/-0r5ZKVEIS4?rel=0]
 
-      [!INCLUDE [learning-approval-request](../includes/learning-approval-request.md)]
-  - content: |
-      Ha completado la sección **Uso de aprobaciones** del aprendizaje guiado de Microsoft Flow.
+    [!INCLUDE [learning-approval-center](../includes/learning-approval-center.md)]
+- title: "Proceso de una solicitud de aprobación"
+  durationInMinutes: 7
+  content: >
+    > [!Video https://www.youtube.com/embed/-0r5ZKVEIS4?rel=0]
+
+
+    [!INCLUDE [learning-approval-request](../includes/learning-approval-request.md)]
+- content: "Ha completado la sección **Uso de aprobaciones** del aprendizaje guiado de Microsoft Flow.\0"
