--- a/flow-docs/guided-learning/get-started.yml
+++ b/flow-docs/guided-learning/get-started.yml
@@ -1,12 +1,12 @@
 ### YamlMime:Tutorial
-title: "Introducción"
+title: Introducción
 metadata:
-  title: "Introducción | Microsoft Flow"
-  description: "Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco."
+  title: Introducción | Microsoft Flow
+  description: Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco.
   audience: Business User
   level: Beginner
   nextTutorialHref: build-flows
-  nextTutorialTitle: "Compilación de flujos"
+  nextTutorialTitle: Compilación de flujos
   displayType: one-column
   author: MSFTMan
   manager: anneta
@@ -14,33 +14,34 @@ metadata:
   ms.topic: get-started-article
   ms.date: 10/04/2017
   ms.author: deonhe
-  ms.openlocfilehash: e0cc75bf5ca6683b5b5ca751908311b226a5065d
-  ms.sourcegitcommit: b943fa83d7ca2d1a313c0c7b2cf0d7e4a9528b85
+  ms.openlocfilehash: 3f5cc6ac324e5e389b05d84c10cc45891ea518d2
+  ms.sourcegitcommit: aee927ab32b5e28ee9b1880b4a292f9c15025f88
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 02/06/2018
+  ms.lasthandoff: 03/28/2018
 items:
 - durationInMinutes: 1
-  content: "Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco.\n"
-- title: "Conceptos básicos de Microsoft Flow"
+  content: >
+    Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco.
+- title: Conceptos básicos de Microsoft Flow
   durationInMinutes: 14
   content: >
     > [!Video https://www.youtube.com/embed/CYR-fZc5Maw?rel=0]
 
 
     [!INCLUDE [learning-introduce-flow](../includes/learning-introduce-flow.md)]
-- title: "Creación de un flujo desde una plantilla"
+- title: Creación de un flujo desde una plantilla
   durationInMinutes: 9
   content: >
-    > [!Video https://www.youtube.com/embed/D46qE7FuShM?rel=0]
+    > [!Video https://www.youtube.com/watch?v=NeCu5VnL4s0
 
 
     [!INCLUDE [learning-create-a-flow](../includes/learning-create-a-flow.md)]
-- title: "Uso de la aplicación móvil Microsoft Flow"
+- title: Uso de la aplicación móvil Microsoft Flow
   durationInMinutes: 8
   content: >
     > [!Video https://www.youtube.com/embed/o80hRMpb0_4?rel=0]
 
 
     [!INCLUDE [learning-mobile-app](../includes/learning-mobile-app.md)]
-- content: "Ha completado la sección **Introducción** del aprendizaje guiado de Microsoft Flow.\0"
+- content: Ha completado la sección **Introducción** del aprendizaje guiado de Microsoft Flow.
