--- a/flow-docs/guided-learning/TOC.yml
+++ b/flow-docs/guided-learning/TOC.yml
@@ -1,8 +1,8 @@
 - name: Introducción
-  href: 'get-started.yml#step-1'
+  href: get-started.yml?tutorial-step=1
 - name: Compilación de flujos
-  href: 'build-flows.yml#step-1'
+  href: build-flows.yml?tutorial-step=1
 - name: Uso de aprobaciones
-  href: 'work-with-approvals.yml#step-1'
+  href: work-with-approvals.yml?tutorial-step=1
 - name: Administración de flujos
-  href: 'administer-flows.yml#step-1'
+  href: administer-flows.yml?tutorial-step=1
