--- a/flow-docs/guided-learning/build-flows.yml
+++ b/flow-docs/guided-learning/build-flows.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Tutorial
-title: "Compilación de flujos"
+title: Compilación de flujos
 metadata:
-  title: "Compilación de flujos | Microsoft Flow"
-  description: "Aprenda a compilar flujos que copian y recopilan datos y flujos que envían notificaciones. Ejecute los flujos de manera programada o a petición desde un botón."
+  title: Compilación de flujos | Microsoft Flow
+  description: Aprenda a compilar flujos que copian y recopilan datos y flujos que envían notificaciones. Ejecute los flujos de manera programada o a petición desde un botón.
   audience: Business User
   level: Beginner
   nextTutorialHref: work-with-approvals
@@ -15,21 +15,23 @@ metadata:
   ms.date: 10/04/2017
   ms.author: deonhe
   ms.openlocfilehash: 6653c723ba9c3dfce8c953b86e3b54d5226cd258
-  ms.sourcegitcommit: b943fa83d7ca2d1a313c0c7b2cf0d7e4a9528b85
+  ms.sourcegitcommit: 945614d737d5909c40029a61e050302d96e1619d
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 02/06/2018
+  ms.lasthandoff: 06/04/2018
+  ms.locfileid: "26580795"
 items:
 - durationInMinutes: 1
-  content: "Aprenda a compilar flujos que copian y recopilan datos y flujos que envían notificaciones. Ejecute los flujos de manera programada o a petición desde un botón.\n"
-- title: "Creación de un flujo de botón"
+  content: >
+    Aprenda a compilar flujos que copian y recopilan datos y flujos que envían notificaciones. Ejecute los flujos de manera programada o a petición desde un botón.
+- title: Creación de un flujo de botón
   durationInMinutes: 11
   content: >
     > [!Video https://www.youtube.com/embed/s8ozmlVRV-Q?rel=0]
 
 
     [!INCLUDE [learning-create-button-flow](../includes/learning-create-button-flow.md)]
-- title: "Obtención de notificaciones"
+- title: Obtención de notificaciones
   durationInMinutes: 6
   content: >
     > [!Video https://www.youtube.com/embed/VEHKGLY0hq4?rel=0]
@@ -43,32 +45,32 @@ items:
 
 
     [!INCLUDE [learning-copy-files](../includes/learning-copy-files.md)]
-- title: "Recopilación de datos"
+- title: Recopilación de datos
   durationInMinutes: 5
   content: >
     > [!Video https://www.youtube.com/embed/U54cdN0tXEI?rel=0]
 
 
     [!INCLUDE [learning-collect-data](../includes/learning-collect-data.md)]
-- title: "Publicación de tweets desde un flujo"
+- title: Publicación de tweets desde un flujo
   durationInMinutes: 15
   content: >
     > [!Video https://www.youtube.com/embed/y1iDal8XPAo?rel=0]
 
 
     [!INCLUDE [learning-push-notifications](../includes/learning-push-notifications.md)]
-- title: "Creación de flujos programados"
+- title: Creación de flujos programados
   durationInMinutes: 9
   content: >
     > [!Video https://www.youtube.com/embed/hh4nmS_M8Co?rel=0]
 
 
     [!INCLUDE [learning-recurrence](../includes/learning-recurrence.md)]
-- title: "Conversión y almacenamiento de documentos"
+- title: Conversión y almacenamiento de documentos
   durationInMinutes: 14
   content: >
     > [!Video https://www.youtube.com/embed/ukRhuJGC9A0?rel=0]
 
 
     [!INCLUDE [learning-create-pdf](../includes/learning-create-pdf.md)]
-- content: "Ha completado la sección **Compilación de flujos** del aprendizaje guiado de Microsoft Flow.\0"
+- content: Ha completado la sección **Compilación de flujos** del aprendizaje guiado de Microsoft Flow.
