commit translated contents

--- a/flow-docs/guided-learning/index.yml
+++ b/flow-docs/guided-learning/index.yml
@@ -19,6 +19,7 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: es-ES
   ms.lasthandoff: 05/19/2018
+  ms.locfileid: "34308795"
 abstract:
   description: Inicie su periplo de aprendizaje con esta colección de cursos en secuencia y conozca la gran cantidad de eficaces funcionalidades de Microsoft Flow.
 sections:
