--- a/flow-docs/guided-learning/get-started.yml
+++ b/flow-docs/guided-learning/get-started.yml
@@ -5,7 +5,7 @@ metadata:
   description: Bienvenido al aprendizaje guiado de Microsoft Flow. En este curso autodidáctico en línea se explica Microsoft Flow de forma secuencial, con el fin de que pueden adquirir los conocimientos poco a poco.
   audience: Business User
   level: Beginner
-  nextTutorialHref: build-flows
+  nextTutorialHref: build-flows.yml
   nextTutorialTitle: Compilación de flujos
   displayType: one-column
   author: MSFTMan
@@ -14,12 +14,12 @@ metadata:
   ms.topic: get-started-article
   ms.date: 10/04/2017
   ms.author: deonhe
-  ms.openlocfilehash: acfe8fb4e4a4eaaaf849ff86b708cb207853a13d
-  ms.sourcegitcommit: 945614d737d5909c40029a61e050302d96e1619d
+  ms.openlocfilehash: b77255b42beb2f90adb9bf7d85da822be7ce9edf
+  ms.sourcegitcommit: 77aae180d972373d1f251fa6a5c8f484f08ffc15
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 06/04/2018
-  ms.locfileid: "31813486"
+  ms.lasthandoff: 08/08/2018
+  ms.locfileid: "39718405"
 items:
 - durationInMinutes: 1
   content: >
