--- a/flow-docs/guided-learning/TOC.yml
+++ b/flow-docs/guided-learning/TOC.yml
@@ -1,8 +1,15 @@
+items:
 - name: Introducción
-  href: get-started.yml?tutorial-step=1
+  href: https://docs.microsoft.com/learn/modules/get-started-with-flow/1-introduction
 - name: Compilación de flujos
-  href: build-flows.yml?tutorial-step=1
+  href: https://docs.microsoft.com/learn/modules/get-started-with-flow/2-create-first-flow
 - name: Uso de aprobaciones
-  href: work-with-approvals.yml?tutorial-step=1
+  href: https://docs.microsoft.com/learn/modules/use-flow-to-create-an-approval-flow/1-create-approval-request
 - name: Administración de flujos
   href: administer-flows.yml?tutorial-step=1
+ms.openlocfilehash: 096b85067e519083739451c1000c65e5f8573a6c
+ms.sourcegitcommit: ffed9f02092fbd19fc4108aee05dd40d1a2a3755
+ms.translationtype: HT
+ms.contentlocale: es-ES
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46711712"
