--- a/flow-docs/TOC.yml
+++ b/flow-docs/TOC.yml
@@ -65,7 +65,7 @@ items:
     href: import-flow-solution.md
   - name: Edición de un flujo basado en la solución
     href: edit-solution-aware-flow.md
-  - name: Eliminación de un flujo basado en la solución
+  - name: Quitar un flujo compatibles con la solución
     href: remove-solution-aware-flow.md
 - name: Common Data Service (CDS) para aplicaciones
   items:
@@ -205,6 +205,8 @@ items:
     href: limits-and-config.md
   - name: Notas de la versión
     href: release-notes.md
+  - name: API web de Microsoft Flow
+    href: web-api.md
   - name: Preguntas más frecuentes
     href: frequently-asked-questions.md
 - name: Aprender de otros
@@ -215,9 +217,9 @@ items:
     href: https://flow.microsoft.com/blog/
   - name: Foros
     href: https://powerusers.microsoft.com/t5/Microsoft-Flow-Community/ct-p/FlowCommunity
-ms.openlocfilehash: a98100739ff22967f0de01d13ce3b75116d2b811
-ms.sourcegitcommit: 35efd5c72e25636470d5e307eba29f77032c29df
+ms.openlocfilehash: a06bf4922b8e17fb8956d9fd5d45f313f736c286
+ms.sourcegitcommit: 791bf29ad58dee8df475fc864ccc213c2c1ebd75
 ms.translationtype: HT
 ms.contentlocale: es-ES
-ms.lasthandoff: 11/06/2018
-ms.locfileid: "51028663"
+ms.lasthandoff: 12/15/2018
+ms.locfileid: "53441100"
