commit translated contents

--- a/flow-docs/breadcrumb/toc.yml
+++ b/flow-docs/breadcrumb/toc.yml
@@ -2,10 +2,14 @@
   href: /
   topicHref: /
   items:
-    - name: Flow
-      tocHref: /flow/
-      topicHref: /flow/
+    - name: Power Platform
+      href: /power-platform/
+      topicHref: /power-platform/
       items:
-        - name: Aprendizaje guiado
-          tocHref: /flow/guided-learning/
-          topicHref: /flow/guided-learning/
+        - name: "Power\_Automate"
+          tocHref: /flow/
+          topicHref: /flow/
+          items:
+            - name: Aprendizaje guiado
+              tocHref: /flow/guided-learning/
+              topicHref: /flow/guided-learning/
